# FMI

./: .gitignore  README.md
.githooks/: pre-commit
1th_semester/Dr1_fn3MI0700193/: CMakeLists.txt  mid_finger.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
1th_semester/hw1_3MI0700193/: CMakeLists.txt  first_zad.cpp  matrices_manipulation.h  second_zad.cpp  third.cpp
1th_semester/hw2_3MI0700193/: CMakeLists.txt  fifth.cpp  first.cpp  fourth.cpp  second.cpp  third.cpp  thirdWithoutVector.cpp
1th_semester/k2_fn3MI0700193/: CMakeLists.txt  first.cpp  second.cpp  third.cpp
1th_semester/k2_v2_3MI0700193/: CMakeLists.txt  first.cpp  second.cpp  third.cpp
2th_semester/Haskell/: README.md
2th_semester/Haskell/01_03_23_2thLecture_daniLecturer/inClass/: CHANGELOG.md  README.md  inClass.cabal  package.yaml
2th_semester/Haskell/17_03_23_4thLecture/ListsLearn/: CHANGELOG.md  ListsLearn.cabal  README.md  package.yaml
2th_semester/Haskell/22_02_23_1thLecture/InitialHaskell/: CHANGELOG.md  InitialHaskell.cabal  README.md  package.yaml
2th_semester/Haskell/Homeworks/1thLectureHw/: 1thLectureHw.cabal  CHANGELOG.md  README.md  package.yaml
2th_semester/Haskell/Homeworks/2thLectureHw/: 2thLectureHw.cabal  CHANGELOG.md  README.md  package.yaml
2th_semester/Haskell/Homeworks/3thLectureHw/: 3thLectureHw.cabal  CHANGELOG.md  README.md  package.yaml
2th_semester/Haskell/Homeworks/4thLectureHw/: 4thLectureHw.cabal  CHANGELOG.md  README.md  package.yaml
2th_semester/Haskell/Homeworks/5thLectureHw/: 5thLectureHw.cabal  CHANGELOG.md  README.md  package.yaml
2th_semester/Haskell/Homeworks/FirstLectureHw/: CHANGELOG.md  FirstLectureHw.cabal  (+2 more)
2th_semester/OOP/02_03_praktikum/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp
2th_semester/OOP/28_02_23_Dimitriev_Vtornik_first/: CMakeLists.txt  main.cpp
2th_semester/OOP/3MI0700193_2/: CMakeLists.txt  main.cpp  playlist.txt  promt.txt
2th_semester/OOP/3MI0700193_2/Playlist/: Playlist.h
2th_semester/OOP/3MI0700193_2/include/: Effect.h  Mix.h  PeriodicSound.h  Sequence.h  Silence.h  Sound.h  SoundFromFile.h
2th_semester/OOP/homeworks/Hw2Library/: CMakeLists.txt  main.cpp
3th_semester/data_structures/homeworks/: output.txt  show-content.sh
3th_semester/data_structures/test_project/: CMakeLists.txt
(+158 files in other folders)
