cmake_minimum_required(VERSION 3.24)
project(hw2_3MI0700193)

set(CMAKE_CXX_STANDARD 11)

add_executable(first first.cpp)
add_executable(second second.cpp)
add_executable(third third.cpp)
add_executable(fourth fourth.cpp)
add_executable(fifth fifth.cpp)

add_executable(thirdWithoutVector thirdWithoutVector.cpp)
